docs: comprehensive update of README and add troubleshooting guide